Force replace email (safe)

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <title>Friends of the Denair Library – Nonprofit • 2025</title>
 <link rel="stylesheet" href="assets/styles.css"/><link rel="icon" href="images/logo.png"/>
 <meta name="data-ein" content="993317345"/><meta name="data-name" content="Friends of the Denair Library"/>
-<meta name="data-email" content="contact@friendsofthedenair.regino.io.vn"/><meta name="data-phone" content="+16179393786"/>
+<meta name="data-email" content="contact@friendsofthedenair.netova.io.vn"/><meta name="data-phone" content="+16179393786"/>
 <meta name="data-address" content="4801 KERSEY ROAD,
 DENAIR, CA 95316"/><meta name="data-map" content="4801+KERSEY+ROAD,+DENAIR,+CA+95316"/>
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
@@ -22,7 +22,7 @@ DENAIR, CA 95316"/><meta name="data-map" content="4801+KERSEY+ROAD,+DENAIR,+CA+9
     <h1>Contact Friends of the Denair Library</h1>
     <p><strong>Address:</strong> 4801 KERSEY ROAD,
 DENAIR, CA 95316</p>
-    <p><strong>Email:</strong> <a href="mailto:contact@friendsofthedenair.regino.io.vn">contact@friendsofthedenair.regino.io.vn</a> • <strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></p>
+    <p><strong>Email:</strong> <a href="contact@friendsofthedenair.netova.io.vn">contact@friendsofthedenair.netova.io.vn</a> • <strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></p>
 
     <form action="#" method="post" class="contact-form" novalidate>
       <h2>Send us a message</h2>
@@ -50,7 +50,7 @@ DENAIR, CA 95316</p>
     <div class="cb8ca8335d1">
       <div class="fcol"><img src="images/logo.png" style="width:140px;margin-bottom:.4rem" alt=""><div class="small">© <span id="year"></span> Friends of the Denair Library</div><div class="small">California Nonprofit Public Benefit • 501(c)(3) • EIN 993317345</div></div>
       <div class="fcol"><div class="small"><strong>Address:</strong> 4801 KERSEY ROAD,
-DENAIR, CA 95316</div><div class="small"><strong>Email:</strong> <a href="mailto:contact@friendsofthedenair.regino.io.vn">contact@friendsofthedenair.regino.io.vn</a></div><div class="small"><strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></div></div>
+DENAIR, CA 95316</div><div class="small"><strong>Email:</strong> <a href="contact@friendsofthedenair.netova.io.vn">contact@friendsofthedenair.netova.io.vn</a></div><div class="small"><strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></div></div>
       <div class="fcol"><div class="small"><strong>Mission:</strong> Practical, partner-driven programs that deliver measurable results.</div></div>
     </div>
   </div>
