Force replace email (safe)

--- a/governance.html
+++ b/governance.html
@@ -32,7 +32,7 @@
     <div class="cb8ca8335d1">
       <div class="fcol"><img src="images/logo.png" style="width:140px;margin-bottom:.4rem" alt=""><div class="small">© <span id="year"></span> Friends of the Denair Library</div><div class="small">501(c)(3) • EIN 993317345</div></div>
       <div class="fcol"><div class="small"><strong>Address:</strong> 4801 KERSEY ROAD,
-DENAIR, CA 95316</div><div class="small"><strong>Email:</strong> <a href="mailto:contact@friendsofthedenair.regino.io.vn">contact@friendsofthedenair.regino.io.vn</a></div><div class="small"><strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></div></div>
+DENAIR, CA 95316</div><div class="small"><strong>Email:</strong> <a href="contact@friendsofthedenair.netova.io.vn">contact@friendsofthedenair.netova.io.vn</a></div><div class="small"><strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></div></div>
       <div class="fcol"><div class="small"><strong>Mission:</strong> Practical, partner-driven programs that deliver measurable results.</div></div>
     </div>
   </div>
