Force replace email (safe)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Friends of the Denair Library – Nonprofit • 2025</title>
 <link rel="stylesheet" href="assets/styles.css"/><link rel="icon" href="images/logo.png"/>
 <meta name="data-ein" content="993317345"/><meta name="data-name" content="Friends of the Denair Library"/>
-<meta name="data-email" content="contact@friendsofthedenair.regino.io.vn"/><meta name="data-phone" content="+16179393786"/>
+<meta name="data-email" content="contact@friendsofthedenair.netova.io.vn"/><meta name="data-phone" content="+16179393786"/>
 <meta name="data-address" content="4801 KERSEY ROAD,
 DENAIR, CA 95316"/><meta name="data-map" content="4801+KERSEY+ROAD,+DENAIR,+CA+95316"/>
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
@@ -59,7 +59,7 @@ DENAIR, CA 95316"/><meta name="data-map" content="4801+KERSEY+ROAD,+DENAIR,+CA+9
       <div class="fcol">
         <div class="small"><strong>Address:</strong> 4801 KERSEY ROAD,
 DENAIR, CA 95316</div>
-        <div class="small"><strong>Email:</strong> <a href="mailto:contact@friendsofthedenair.regino.io.vn">contact@friendsofthedenair.regino.io.vn</a></div>
+        <div class="small"><strong>Email:</strong> <a href="contact@friendsofthedenair.netova.io.vn">contact@friendsofthedenair.netova.io.vn</a></div>
         <div class="small"><strong>Phone:</strong> <a href="tel:+16179393786">+16179393786</a></div>
       </div>
       <div class="fcol">
